--- a/syslog-server/Jenkinsfile
+++ b/syslog-server/Jenkinsfile
@@ -9,20 +9,20 @@ pipeline {
         stage('Build') {
             steps {
                 echo 'Building..'
-                sh 'mvn -Dmaven.test.failure.ignore=true clean compile'
+                sh 'mvn -f syslog-server/pom.xml -Dmaven.test.failure.ignore=true clean compile'
             }
             }
 
         stage('Test') {
             steps {
                 echo 'Testing..'
-                sh 'mvn -Dmaven.test.failure.ignore=true test'
+                sh 'mvn -f syslog-server/pom.xml -Dmaven.test.failure.ignore=true test'
             }
         }
         stage('Package') {
             steps {
                 echo 'Packaging....'
-                sh 'mvn -DskipTests package'
+                sh 'mvn -f syslog-server/pom.xml -DskipTests package'
                 archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
             }
         }
