--- a/nt-health/package.json
+++ b/nt-health/package.json
@@ -14,10 +14,21 @@
     "redux": "^4.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "test": "istanbul cover node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js",
+    "coverage": "istanbul cover --report cobertura node_modules/.bin/_mocha -- test/*_test.js test/api/*_test.js && mocha test/*_test.js test/api/*_test.js --reporter mocha-junit-reporter --reporter-options mochaFile=./results/test-results.xml",
+    "start": "node server.js",
+    "clean:build": "node_modules/.bin/rimraf $npm_package_config_distribution",
+    "create:build": "node_modules/.bin/mkdirp $npm_package_config_build",
+    "clean": "npm run clean:build && npm run create:build && rimraf npm-debug.log",
+    "precopy": "echo Copying $npm_package_config_service v\"$npm_package_version\" codebase to build folder",
+    "copy": "cp -R -L  ./node_modules ./public ./*.json ./helpers ./api ./test ./scripts ./*.js  $npm_package_config_build",
     "build": "npm run clean",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "prepackage": "echo Packaging $npm_package_config_service v\"$npm_package_version\" service",
+    "package": " npm run build && npm run copy",
+    "postpackage": "cd $npm_package_config_build && zip -r ../$npm_package_config_service_short-\"$npm_package_version\".zip . && cd ../.. && node_modules/.bin/rimraf $npm_package_config_build",
+    "predist": "echo Preparing to package $npm_package_config_service v\"$npm_package_version\" service",
+    "dist": "npm run build && npm run package",
+    "postdist": "echo Successfully packaged $npm_package_config_service v\"$npm_package_version\" service"
   },
   "eslintConfig": {
     "extends": "react-app"
