New files nt-health1 is the new UI module , nt-health is the old one which lists the data new one works for the counter and sync time integration

--- a/syslog-server/Dockerfile
+++ b/syslog-server/Dockerfile
@@ -4,12 +4,11 @@ WORKDIR /opt/syslog-server
 
 COPY . .
 
-RUN mvn compile \
-	&& mvn test \
-	&& mvn package
+RUN mvn compile -DskipTests=true \
+	&& mvn package -DskipTests=true
 
 
-FROM alpine:latest
+FROM java:openjdk-8-jre
 
 WORKDIR /opt
 
