--- a/syslog-server/Dockerfile
+++ b/syslog-server/Dockerfile
@@ -1,15 +1,13 @@
 FROM maven:3.6.0-jdk-8 as build
 
-WORKDIR /opt
+WORKDIR /opt/syslog-server
 
-COPY syslog-server/ .
+COPY ./syslog-server .
 
 RUN mvn package -DskipTests
 
 
 FROM java:openjdk-8-jre
-
-WORKDIR /opt
 
 COPY --from=build /opt/syslog-server/target/syslog-server.jar .
 
