--- a/syslog-server/src/main/resources/application.properties
+++ b/syslog-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8080
 server.servlet.context-path=/network/v1
 spring.datasource.url = jdbc:mysql://mysql:3306/networkhealth
 spring.datasource.username = root
-spring.datasource.password = newpassword
+spring.datasource.password = root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
 #show sql statement
